config/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: diary
spec:
  type: NodePort
  selector:
    app: diary
  ports:
  - name: frontend
    port: 80
    targetPort: 80
  - name: backend
    port: 8000
    targetPort: 8000
